# IIR-elastics

./: .gitignore  IIR.py  fem.py  geometry.py  geometry_rod.py  interface.py  params.py  plot_freq_hist.py  rod_quad.py  rod_tet.py  test_dFdx.py  viewer.py  vis_eigs.py
viewer/: CMakeLists.txt  setup.py
viewer/fc_viewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
viewer/src/cpp/: viewer.cpp
viewer/src/fc_viewer.egg-info/: PKG-INFO  SOURCES.txt
